--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <title>Document</title>
 </head>
 <body>
+   
+<div id="topPage" class="toppage">
     <h1>Space Invaders</h1>
+</div>
+
+<canvas id="myCanvas" class="mycanvas" width="1000px" height="800px"></canvas>
+
+<div id="bottomPg" class="bottompg">
+    <button id="playButton" class="playbtn">Play</button>
+
+    <div id="scoreBoard" class="scoreboard">
+    </div>
+
+</div>
+
 </body>
 </html>
