--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script.js"></script>
-    <link rel="stylesheet" href="../Game-On/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="../Game-On/style.css" />
     <title>Document</title>
-</head>
-<body>
-   
-<div id="topPage" class="toppage">
-    <h1>Space Invaders</h1>
-</div>
-
-<canvas id="myCanvas" class="mycanvas" width="1000px" height="800px"></canvas>
-
-<div id="bottomPg" class="bottompg">
-    <button id="playButton" class="playbtn">Play</button>
-
-    <div id="scoreBoard" class="scoreboard">
+  </head>
+  <body>
+    <div id="topPage" class="toppage">
+      <h1>Space Invaders</h1>
     </div>
 
-</div>
+        <canvas
+          id="myCanvas"
+          class="mycanvas"
+          width="1000px"
+          height="800px"
+        ></canvas>
 
-</body>
+    <img
+      id="purpInvaderImg"
+      src="./Images/purple-space-invader.png"
+      style="display: none"
+    />
+    <!-- <img id="shipImg" src="./Images/player.png" style="display: none" /> -->
+
+    <div id="bottomPg" class="bottompg">
+      <button id="playButton" class="playbtn">Play</button>
+
+      <div id="scoreBoard" class="scoreboard"></div>
+    </div>
+  </body>
 </html>
