top of the morning

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./script.js" defer></script>
-    <link rel="stylesheet" href="../Game-On/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -22,7 +22,7 @@
 
     <img
       id="purpInvaderImg"
-      src="./Images/purple-space-invader.png"
+      src="./images/purple-space-invader.png"
       style="display: none"
     />
     <!-- <img id="shipImg" src="./Images/player.png" style="display: none" /> -->
