--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
       <h1>Space Invaders</h1>
     </div>
 
-        <canvas
-          id="myCanvas"
-          class="mycanvas"
-          width="1000px"
-          height="800px"
-        ></canvas>
+    <canvas
+      id="myCanvas"
+      class="mycanvas"
+      width="1000px"
+      height="800px"
+    ></canvas>
 
     <img
       id="purpInvaderImg"
       src="./images/purple-space-invader.png"
       style="display: none"
     />
-    <!-- <img id="shipImg" src="./Images/player.png" style="display: none" /> -->
+    <img id="shipImg" src="./Images/player.png" style="display: none" />
 
     <div id="bottomPg" class="bottompg">
       <button id="playButton" class="playbtn">Play</button>
