--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
     <img
       id="purpInvaderImg"
-      src="./images/purple-space-invader.png"
+      src="./assets/purple-space-invader.png"
       style="display: none"
     />
-    <img id="shipImg" src="./Images/player.png" style="display: none" />
+    <img id="shipImg" src="./assets/player.png" style="display: none" />
 
     <div id="bottomPg" class="bottompg">
       <button id="playButton" class="playbtn">Play</button>
